Repos/Server/Engine/Interpreter/Parser4/XQueryParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from XQuery.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591


   // global code stuff that will be included in the source file just before the 'XQueryParser' class below
	using System.Collections;
	using Newtera.Server.Engine.Interpreter;
	using Newtera.Server.Engine.Vdom;

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class XQueryParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, STRING_LITERAL=21, STRING_QUOTE=22, NUMERIC_LITERAL=23, 
		Name=24, INLINE=25, INLINE_LEFT_BRACKET=26, INLINE_RIGHT_BRACKET=27, PREDEFINED_ENTITY_REF=28, 
		WS=29, SEMICOLON=30, EQUALS=31, L_PAREN=32, R_PAREN=33, COMMA=34, L_BRACKET=35, 
		R_BRACKET=36, COLON=37, D_COLON=38, L_BRACE=39, R_BRACE=40, DEREFERENCE=41, 
		AT=42, SLASH_AT=43, STAR=44, SLASH=45, SLASH_SLASH=46, MOD=47, STAR_COLON=48, 
		NOT_EQUALS=49, D_EQUALS=50, NOT_D_EQUALS=51, LESS_THAN=52, GREATER_THAN=53, 
		LESS_THAN_EQUALS=54, GREATER_THAN_EQUALS=55, PLUS=56, MINUS=57, BAR=58, 
		SET_EQUAL_TO=59, QUOTE=60, ESCAPED_QUOTE=61, S_QUOTE=62, SLASH_GREATER_THAN=63, 
		LESS_THAN_SLASH=64, DOLLAR=65;
	public const int
		RULE_start = 0, RULE_queryModule = 1, RULE_importAs = 2, RULE_exprSequence = 3, 
		RULE_expression = 4, RULE_pathExpression = 5, RULE_path = 6, RULE_xstep = 7, 
		RULE_basicExpression = 8, RULE_predicate = 9, RULE_variable = 10, RULE_flwrExpr = 11, 
		RULE_flClause = 12, RULE_forClause = 13, RULE_letClause = 14, RULE_whereClause = 15, 
		RULE_sortByClause = 16, RULE_sortSpecList = 17, RULE_sortSpec = 18, RULE_logicalOrExpression = 19, 
		RULE_logicalAndExpression = 20, RULE_rangeExpression = 21, RULE_equalityExpression = 22, 
		RULE_relationalExpression = 23, RULE_additiveExpression = 24, RULE_multiplicativeExpression = 25, 
		RULE_unaryExpression = 26, RULE_primitiveExpression = 27, RULE_functionCall = 28, 
		RULE_literal = 29, RULE_ifExpr = 30, RULE_elementConstructor = 31, RULE_elementContents = 32, 
		RULE_attribute = 33, RULE_enclosedExpr = 34;
	public static readonly string[] ruleNames = {
		"start", "queryModule", "importAs", "exprSequence", "expression", "pathExpression", 
		"path", "xstep", "basicExpression", "predicate", "variable", "flwrExpr", 
		"flClause", "forClause", "letClause", "whereClause", "sortByClause", "sortSpecList", 
		"sortSpec", "logicalOrExpression", "logicalAndExpression", "rangeExpression", 
		"equalityExpression", "relationalExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "primitiveExpression", "functionCall", "literal", "ifExpr", 
		"elementConstructor", "elementContents", "attribute", "enclosedExpr"
	};

	private static readonly string[] _LiteralNames = {
		null, "'import'", "'as'", "'return'", "'for'", "'in'", "'let'", "'where'", 
		"'sortby'", "'ascending'", "'descending'", "'or'", "'and'", "'to'", "'ni'", 
		"'like'", "'div'", "'null'", "'if'", "'then'", "'else'", null, null, null, 
		null, null, "'[['", "']]'", null, null, "';'", "'='", "'('", "')'", "','", 
		"'['", "']'", "':'", "'::'", "'{'", "'}'", "'=>'", "'@'", "'/@'", "'*'", 
		"'/'", "'//'", "'%'", "'*:'", "'!='", "'=='", "'!=='", "'<'", "'>'", "'<='", 
		"'>='", "'+'", "'-'", "'|'", "':='", null, "'\\\"'", "'''", "'/>'", "'</'", 
		"'$'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "STRING_LITERAL", 
		"STRING_QUOTE", "NUMERIC_LITERAL", "Name", "INLINE", "INLINE_LEFT_BRACKET", 
		"INLINE_RIGHT_BRACKET", "PREDEFINED_ENTITY_REF", "WS", "SEMICOLON", "EQUALS", 
		"L_PAREN", "R_PAREN", "COMMA", "L_BRACKET", "R_BRACKET", "COLON", "D_COLON", 
		"L_BRACE", "R_BRACE", "DEREFERENCE", "AT", "SLASH_AT", "STAR", "SLASH", 
		"SLASH_SLASH", "MOD", "STAR_COLON", "NOT_EQUALS", "D_EQUALS", "NOT_D_EQUALS", 
		"LESS_THAN", "GREATER_THAN", "LESS_THAN_EQUALS", "GREATER_THAN_EQUALS", 
		"PLUS", "MINUS", "BAR", "SET_EQUAL_TO", "QUOTE", "ESCAPED_QUOTE", "S_QUOTE", 
		"SLASH_GREATER_THAN", "LESS_THAN_SLASH", "DOLLAR"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "XQuery.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


	   // additional methods and members for the generated 'MyParser' class
		Interpreter _interpreter;
		Stack _stack;
		Stack _contextStack; // Soly used for providing context to the path embedded in a predicate
		
		public IExpr Parse()
		{
			return Parse(null);
		}
		
		public IExpr Parse(IExpr context)
		{
	        
			_stack = new Stack();
			_contextStack = new Stack();
			
			if (context != null)
			{
				_contextStack.Push(context);
			}
			
			start();
			
			if (_stack.Count != 1)
			{
				throw new Exception("Parser fatal error: Bad stack size: " + _stack.Count);
			}

			return  (IExpr) _stack.Pop();
		}	

	public XQueryParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class StartContext : ParserRuleContext {
		public QueryModuleContext queryModule() {
			return GetRuleContext<QueryModuleContext>(0);
		}
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
		public override void EnterRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 0, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; queryModule();

					IExpr expr = (IExpr) _stack.Pop();
					_stack.Push(new QueryExpr(_interpreter, expr));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryModuleContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ImportAsContext[] importAs() {
			return GetRuleContexts<ImportAsContext>();
		}
		public ImportAsContext importAs(int i) {
			return GetRuleContext<ImportAsContext>(i);
		}
		public QueryModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryModule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.EnterQueryModule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.ExitQueryModule(this);
		}
	}

	[RuleVersion(0)]
	public QueryModuleContext queryModule() {
		QueryModuleContext _localctx = new QueryModuleContext(Context, State);
		EnterRule(_localctx, 2, RULE_queryModule);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==T__0) {
				{
				{
				State = 73; importAs();
				}
				}
				State = 78;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 79; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImportAsContext : ParserRuleContext {
		public ITerminalNode[] Name() { return GetTokens(XQueryParser.Name); }
		public ITerminalNode Name(int i) {
			return GetToken(XQueryParser.Name, i);
		}
		public ImportAsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_importAs; } }
		public override void EnterRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.EnterImportAs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.ExitImportAs(this);
		}
	}

	[RuleVersion(0)]
	public ImportAsContext importAs() {
		ImportAsContext _localctx = new ImportAsContext(Context, State);
		EnterRule(_localctx, 4, RULE_importAs);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81; Match(T__0);
			State = 82; Match(Name);
			State = 83; Match(T__1);
			State = 84; Match(Name);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprSequenceContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(XQueryParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(XQueryParser.COMMA, i);
		}
		public ExprSequenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exprSequence; } }
		public override void EnterRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.EnterExprSequence(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.ExitExprSequence(this);
		}
	}

	[RuleVersion(0)]
	public ExprSequenceContext exprSequence() {
		ExprSequenceContext _localctx = new ExprSequenceContext(Context, State);
		EnterRule(_localctx, 6, RULE_exprSequence);

			int depth = _stack.Count;
			
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; expression();
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==COMMA) {
				{
				{
				State = 87; Match(COMMA);
				State = 88; expression();
				}
				}
				State = 93;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}

					IExpr expr = null;
					if (_stack.Count > depth)
					{
						ExprCollection exprs = new ExprCollection();
						while (_stack.Count > depth)
						{
							expr = (IExpr) _stack.Pop();
							exprs.Insert(0, expr);
						}
						_stack.Push(exprs);
					}
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public BasicExpressionContext basicExpression() {
			return GetRuleContext<BasicExpressionContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 8, RULE_expression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; basicExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PathExpressionContext : ParserRuleContext {
		public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		public PathContext path() {
			return GetRuleContext<PathContext>(0);
		}
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public PathExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pathExpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.EnterPathExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IXQueryListener typedListener = listener as IXQueryListener;
			if (typedListener != null) typedListener.ExitPathExpression(this);
		}
	}

	[RuleVersion(0)]
	public PathExpressionContext pathExpression() {
		PathExpressionContext _localctx = new PathExpressionContext(Context, State);
		EnterRule(_localctx, 10, RULE_pathExpression);

			bool hasSortBy = false;
			
		try {
			State = 109;
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 98; variable(false);
				State = 99; path();

							ExprCollection steps = (ExprCollection) _stack.Pop();
							IExpr context = (IExpr) _stack.Pop();
							_stack.Push(new Path(_interpreter, steps, context));
						
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 102; functionCall();
				State = 103; path();
				   
							ExprCollection steps = (ExprCollection) _stack.Pop();
							IExpr context = (IExpr) _stack.Pop();
							_stack.Push(new Path(_interpreter, steps, context));        
				        
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 106; path();
